lots of liukiu stuff

--- a/localization/english/missions/jomon_missions_l_english.yml
+++ b/localization/english/missions/jomon_missions_l_english.yml
@@ -604,3 +604,235 @@ l_english:
  me_honshu_20_desc:0 ""
  me_honshu_20.a:0 ""
  me_honshu_20_tooltip:0 "The mission task '#Y $jomon_honshu_missions_task_20$#!' has now been #G Completed#!!" 
+
+
+## DUUCHUU ##
+ jomon_duuchuu_missions:0 "Calm Waters in Liukiu"
+ jomon_duuchuu_missions_DESCRIPTION:0 "The peaceful islands of the #E Liukiu#! tribe are undisturbed. They trade their seashells for iron, they craft their pretty pots, and they pray to their spirits, #Y Kaminchu#!, and ancestors. For thousands of years, they have rested on these islands, isolated from the happenings on #E Wa#! proper.\n\nBut, their isolation may soon come to an end if fate decides to be diverted. What will become of the isolated #E Duuchuu#! and their precious islands?"
+ jomon_duuchuu_missions_CRITERIA_DESCRIPTION:0 "This mission will be completed when the #E Duuchuu#! have established naval hegemony of their region."
+ jomon_duuchuu_missions_BUTTON_TOOLTIP:0 "Shift the tides of fate."
+ 
+#Missions
+ 
+ jomon_duuchuu_missions_task_1:0 "Calm Before the Storm"
+ jomon_duuchuu_missions_task_1_DESC:0 "The islands of the #E Duuchuu#! are filled with peaceful peoples relying on their local resources to trade and survive. They've lived thousnads of years in isolation from the rest of the #E Jomon#!, and have not had to face the #E Yayoi#! in combat either. Thus, it is an opportune time to invest in the prosperity of the islands. \n\n\n\n\n\n\n\n\n\n@greek_mil11!"
+ 
+ jomon_duuchuu_missions_task_2:0 "She Sells Seashells"
+ jomon_duuchuu_missions_task_2_DESC:0 "The #E Liuchu#! were talented at crafting #Y Shell Bracelets#! and selling them to the #E Yayoi#! in exchange for #Y Base Metals#! and #Y Precious Metals#!. \n\n\n\n\n\n\n\n\n\n@tibet_mil3!"
+ 
+ jomon_duuchuu_missions_task_3:0 "Fishy Business"
+ jomon_duuchuu_missions_task_3_DESC:0 "As islander peoples, the #E Liuchu#! must be adept at collecting #Y Fish#! and maximizing their food sources. \n\n\n\n\n\n\n\n\n\n@greek_mil13!"
+ 
+ jomon_duuchuu_missions_task_4:0 "Mother of Men"
+ jomon_duuchuu_missions_task_4_DESC:0 "The #E Unaric#! religion is peculiar amongst other religions in the area. Some argue that it was even a #E Matriarchal#! society. Regardless, it's clear women are preferred for religious happenings, so, we should put adequate women in power. \n\n\n\n\n\n\n\n\n\n@tibet_mil13!"
+ 
+ jomon_duuchuu_missions_task_5:0 "Maritime Merchants"
+ jomon_duuchuu_missions_task_5_DESC:0 "In order to help facilitate trade, we should build a navy to help! We only need #Y Light Ships#!, after all, we don't plan to fight anyone, right? \n\n\n\n\n\n\n\n\n\n@india_mil3!"
+ 
+ jomon_duuchuu_missions_task_6:0 "Cowrie, Rice, and all that's Nice"
+ jomon_duuchuu_missions_task_6_DESC:0 "The #E Duuchuu#! traded for both #Y Cowrie#! and #Y Rice#! from sources other than the #E Yayoi#!. In fact, they even developped their own limited form of #E Wet-Rice Agriculture#!. There is even evidence of trade with places as far as #E Yan#! \n\n\n\n\n\n\n\n\n\n@east_steppemil2!"
+ 
+ jomon_duuchuu_missions_task_7:0 "News from the Nuuru"
+ jomon_duuchuu_missions_task_7_DESC:0 "The #Y Nuruu Priestess#! is the most important of the #Y Kaminchu#! class. They were traditionally women, and acted as a medium between the divine world and our own. What kind of news does she have for us? \n\n\n\n\n\n\n\n\n\n@celt_mil2!"
+ 
+ jomon_duuchuu_missions_task_8:0 "Waters Flow to Formosa"
+ jomon_duuchuu_missions_task_8_DESC:0 ""
+ 
+ jomon_duuchuu_missions_task_9:0 "Permanent Pinghu Presence"
+ jomon_duuchuu_missions_task_9_DESC:0 ""
+ 
+ jomon_duuchuu_missions_task_10:0 "A New Anaro"
+ jomon_duuchuu_missions_task_10_DESC:0 ""
+ 
+ jomon_duuchuu_missions_task_11:0 "Ichor of the Igorot"
+ jomon_duuchuu_missions_task_11_DESC:0 ""
+ 
+ jomon_duuchuu_missions_task_12:0 "Azure Shores of Zhuya"
+ jomon_duuchuu_missions_task_12_DESC:0 ""
+ 
+ jomon_duuchuu_missions_task_13:0 "Forward Colonization"
+ jomon_duuchuu_missions_task_13_DESC:0 "The people of #Y [GetProvince('(int32)9740').GetName]#! are our flesh and blood, yet they lay much closer to the #E Kumaso#! people of the mainland. It would be rather aggressive to claim this as our own, but we do have a legitimate claim to the island."
+ 
+ jomon_duuchuu_missions_task_14:0 "Conquest of Kumaso"
+ jomon_duuchuu_missions_task_14_DESC:0 ""
+ 
+ jomon_duuchuu_missions_task_15:0 "Matter of Matsura"
+ jomon_duuchuu_missions_task_15_DESC:0 ""
+ 
+ jomon_duuchuu_missions_task_16:0 "The Ghost of Tsushima"
+ jomon_duuchuu_missions_task_16_DESC:0 ""
+ 
+ jomon_duuchuu_missions_task_17:0 "Terrify the Tamna"
+ jomon_duuchuu_missions_task_17_DESC:0 ""
+ 
+ jomon_duuchuu_missions_task_18:0 "Oki for Okinawa"
+ jomon_duuchuu_missions_task_18_DESC:0 ""
+ 
+ jomon_duuchuu_missions_task_19:0 "Settlers of Sato"
+ jomon_duuchuu_missions_task_19_DESC:0 ""
+ 
+ jomon_duuchuu_missions_task_20:0 "Our So-Called Family"
+ jomon_duuchuu_missions_task_20_DESC:0 ""
+
+ jomon_duuchuu_missions_task_21:0 "Purchase Changcheng"
+ jomon_duuchuu_missions_task_21_DESC:0 ""
+
+ jomon_duuchuu_missions_task_22:0 "A Pirate's Life for Me?"
+ jomon_duuchuu_missions_task_22_DESC:0 ""
+
+ jomon_duuchuu_missions_task_23:0 "Yoink Yongjudong"
+ jomon_duuchuu_missions_task_23_DESC:0 ""
+
+ jomon_duuchuu_missions_task_24:0 "The Yuta Rebuttle"
+ jomon_duuchuu_missions_task_24_DESC:0 "The #Y Yuta#! are another major faction of the #E Kaminchu#! religious class. Although the #Y Nuuru#! are typically more important, the #Y Yuta#! have a habit of undercutting them anyways. They refute the #Y Nuruu's#! suggestion to take a new, less passive, stance on diplomacy. Let's hear what they have to say for themselves."
+
+ jomon_duuchuu_missions_task_25:0 "Yaeyama Yuta Proposal"
+ jomon_duuchuu_missions_task_25_DESC:0 "The #Y Yuta#! class have another proposal concering our governance of the #E Yizhou#! people. Let's hear what they have to say for themselves."
+
+ jomon_duuchuu_missions_task_26:0 "Name of the Nansei"
+ jomon_duuchuu_missions_task_26_DESC:0 ""
+ 
+ 
+ #Tooltips
+ okinawa_high_priest_tt:0 "Our #E High Priest#! is a #Y Woman#!."
+ okinawa_elder_tt:0 "Our #E High Elder#! is a #Y Woman#!."
+ okinawa_arbitrator_tt:0 "Our #E Arbitrator #! is a #Y Woman#!."
+ okinawa_wise_person_tt:0 "Our #E Wise One#! is a #Y Woman#!."
+ okinawa_wise_person_tt_2:0 "Our #E Wise One#! is a #Y Woman#! and has #G 8#! or more #Y Zeal#! @religious_icon!."
+ empower_women_tt:0 "Our #E High Priest#! and #E Wise One#! will gain #G 5#! @religious_icon! each.\nOur #E Arbitrator#! and #E High Elder#! will gain #G 5#! @oratory_icon! each."
+ okinawa_oracle_tt_2:0 "The #Y Nuuru Priestess#! requests our presence immediately."
+ okinawa_oracle_tt:0 "We will recieve a revelation from the #Y Nuuru Priestess#!."
+ okinawa_osumi_tt:0 "Any country owns #Y [GetProvince('(int32)9740').GetName]#!."
+ okinawa_make_an_offer_tt:0 "Make an offer to purchase #Y [GetProvince('(int32)9740').GetName]#!"
+ duuchuu_yoink_tt:0 "Our #E Navy#! has #Y 30#! or more ships and has a #E Comander#!."
+ okinawa_disaster_tt:0 "#R If what the #Y Nuruu#! says is true, we will experience the following:#!"
+ 
+ 
+ #Modifiers
+ okinawa_calm:0 "Calm Before the Storm"
+ okinawa_fish:0 "Skilled Fishermen"
+ okinawa_boats:0 "Maritime Merchants"
+ okinawa_rice:0 "Wet-Rice Agriculture"
+ terrify_tamna:0 "Terror of the Sea"
+ 
+ #Others
+ shell_bracelet:0 "Silver Shell Bracelet"
+ shell_bracelet_desc:0 "A shining silver exterior made from polished metals imported from China and Japan, this ornament has an intricate seashell pattern adorning its rim, giving it a distinct Liukiu feel."
+ pirate_monarchy:0 "Piratocratic Kingdom"
+ shell_jewelry:0 "Seashell Bracelet"
+ shell_jewelry_desc:0 "An especially expensive Seashell Bracelet created by the natives of the Nanto islands, or as they call themselves, the Liuchu. We traded some useless territory filled with Duuchuu for this priceless artifact, now that's stonks!"
+ 
+ #Events
+ me_duuchuu_1_title:0 "$jomon_duuchuu_missions_task_1$"
+ me_duuchuu_1_desc:0 "The sweet seabreeze blows gently across #E Chief#! [GetCountry('OK1').GetRuler.GetPraenomen|E]'s face. They, like all residents of the #E Duuchuu Islands#!, enjoy relative peace and prosperity. They worship their unique #E Unaric#! rituals, survive off their islander economy, and have largely avoided anything but peaceful contact with the #E Yayoi#! on mainland #E Wa#!.\n\nYet something is off. Perhaps it is nothing, but do the winds have a certain chill they did not used to have? It reminds #E Chief [GetCountry('OK1').GetRuler.GetPraenomen]#! of a typhoon, yet somehow different... more subtle."
+ me_duuchuu_1.a:0 "It's probably nothing."
+ me_duuchuu_1_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_1$#!' has now been #G Completed#!!"
+ 
+ me_duuchuu_2_title:0 "$jomon_duuchuu_missions_task_2$"
+ me_duuchuu_2_desc:0 "Us peaceful #E Duuchuu#! love nothing more than our seashell bracelets and jewelry. They train us in an expertise of designing intricate patterns. The #E Yayoi#! and #E Chinese#! seem to enjoy them as well. We have acquired much iron from them in exchange for these bracelets.\n\nIn particular, a craftsman from #E Amami#! has produced a fusion of iron and seashell in a bracelet. It's sparkling beauty is worth enough to be offered to the spirits."
+ me_duuchuu_2.a:0 "It's tempting to have for myself!"
+ me_duuchuu_2_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_2$#!' has now been #G Completed#!!"
+ 
+ me_duuchuu_3_title:0 "$jomon_duuchuu_missions_task_3$"
+ me_duuchuu_3_desc:0 "Ironically, there's nothing fishy about making an honest living off of catching fish! For an islander's survival, it is paramount to become adept at catching fish. Especially in the case of #E Miyako#!. The #E Miyako#! islanders have been seperated from the #E Northern Liukiu#! island chain multiple times in the past, requiring them to become particularly skillful at surviving."
+ me_duuchuu_3.a:0 "Nothing fishy here."
+ me_duuchuu_3_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_3$#!' has now been #G Completed#!!"
+ 
+ me_duuchuu_4_title:0 "$jomon_duuchuu_missions_task_4$"
+ me_duuchuu_4_desc:0 "Women within #E Liukiu#! society form the majority of a powerful religious class known as the #E Kaminchu#!, or the divinely blessed ones. Because of this, it is not uncommon in #E Liukiu#! to find a woman at equal footing to a man, and in many cases, valued more than men.\n\nThe #E Nuruu#! class can be compared to oracles, and along with the #E Yuta#! class, form the groups of people who are selected directly from the spirits themselves. Lower classes, such as the #E Shimuchi#!, #E Usagiyaa#!, and #E Ukuri#! also are associated with divine functions, and are not exclusive to women.\n\nIn allowing women to thrive, they have shown a particular level of expertise and specialization in religious roles in our society."
+ me_duuchuu_4.a:0 "Thank Amami for women."
+ me_duuchuu_4_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_4$#!' has now been #G Completed#!!"
+ 
+ me_duuchuu_5_title:0 "$jomon_duuchuu_missions_task_5$"
+ me_duuchuu_5_desc:0 "Our navy is purely economical. It's to assure that our merchants are safe, eloquent, and happy. Thus, we don't need to load our navies with soldiers, instead, we can load them with goods! This will make it a lot cheaper to produce and maintain our fleet. Surely, we have no need for a powerful navy, after all, who would wish ill will on us?"
+ me_duuchuu_5.a:0 "It's efficient, that's for sure."
+ me_duuchuu_5_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_5$#!' has now been #G Completed#!!"
+ 
+ me_duuchuu_6_title:0 "$jomon_duuchuu_missions_task_6$"
+ me_duuchuu_6_desc:0 "Our trade extends both north and south; with the #E Yayoi#!, #E Yizhou#!, and even the #E Yue#!! Our traditions of trading also stretches back far before the #E Yayoi#! arrived, allowing us to already be familiar with things like #E Rice#!.\n\nRecently, there's been an uptick in wet-rice agriculture as people here have noticed the #E Yayoi#! using it to great effect. This should suppliment our capabilities to produce food."
+ me_duuchuu_6.a:0 "Mm, rice and fish!"
+ me_duuchuu_6_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_6$#!' has now been #G Completed#!!"
+
+ me_duuchuu_700_desc:0 "The #E Nuruu#! priestess gives us grave news. She speaks in a daze, her voice distorting,\n\n#R "#E The waters will run red with blood.\nA typhoon comes so large it will blot out the sun.\nAll will be lost, your lives will be cost.\nThus is decreed, your folly is greed."#!#!\n\nA deafening silence fills the room as the #E Nuruu#! falls to the floor panting. However, you cannot wait to ask her, "Oh, #E Nuruu#!, tell us how we can avoid such a fate. What can we do to appease the gods!?\n\nThe #E Nuruu#! catches her breath and stands back up. In her normal voice, she replies, "I will pray to the heavens. Come back to me in 29 days, and I will have your answer."
+ me_duuchuu_700.a:0 "Are we truly doomed?"
+
+ me_duuchuu_701_desc:0 "Nervously, you return to the #E Nuruu#! after exactly 29 days. She greets you with kind, but intense eyes, no longer in a trance as she was last time.\n\n"I will waste no time. I have spoken to mother Amamichuu. She has offered us salvation, but she says it is not without cost. To prove your loyalties, you must sacrifice 1,000 warriors. Then I must pray to Hinukan. This will be completed in 10 days, and then you must return.""
+ me_duuchuu_701.a:0 ""We will do what we must...""
+
+ me_duuchuu_702_desc:0 "After 10 days, you return to the #E Nuruu#!. She is in the middle of a divination. You wait for hours before she opens her eyes. The fire burning near her immediately extinguishes. She stands upright and speaks.\n\n"You have done well, Hinukan is pleased. His flames have been quelled. The final command he speaks, be no longer satisfied on our islands. We must grow, influence, and even... go to war if we must. There is one more message, but I cannot reveal it to you yet. This time, I will come to you to tell you the final revelation.""
+ me_duuchuu_702.a:0 ""Is this the end of peace?""
+ 
+ me_duuchuu_7_title:0 "$jomon_duuchuu_missions_task_7$"
+ me_duuchuu_7_desc:0 ""Chief of the #E Liukiu#!, I, the community #E Nuruu#! have arrived to you to deliver the final message," the #E Nuruu#! anounces, startling all in the court.\n\nHer presence was completely undetected, how she enterred is beyond you, but you open your ears to listen.\n\n"Shinerichuu has told me the lands we must bring under our influence. For it is the only way we can avoid disaster. He speaks of the lands of the #E Yizhou#! to our southwest and the lands of the #E Kumaso#! to the northeast. He speaks of them as if they are to belong to us. This is my final message."\n\nAnd with that, she parts, leaving no chance to ask questions. The decision now remains in your hands."
+ me_duuchuu_7.a:0 "The tides of change are upon us."
+ me_duuchuu_7_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_7$#!' has now been #G Completed#!!"
+ 
+ me_duuchuu_8_title:0 "$jomon_duuchuu_missions_task_8$"
+ me_duuchuu_8_desc:0 ""
+ me_duuchuu_8.a:0 ""
+ me_duuchuu_8_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_8$#!' has now been #G Completed#!!"
+ 
+ me_duuchuu_9_title:0 "$jomon_duuchuu_missions_task_9$"
+ me_duuchuu_9_desc:0 ""
+ me_duuchuu_9.a:0 ""
+ me_duuchuu_9_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_9$#!' has now been #G Completed#!!"
+ 
+ me_duuchuu_10_title:0 "$jomon_duuchuu_missions_task_10$"
+ me_duuchuu_10_desc:0 ""
+ me_duuchuu_10.a:0 ""
+ me_duuchuu_10_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_10$#!' has now been #G Completed#!!"
+ 
+ me_duuchuu_11_title:0 "$jomon_duuchuu_missions_task_11$"
+ me_duuchuu_11_desc:0 ""
+ me_duuchuu_11.a:0 ""
+ me_duuchuu_11_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_11$#!' has now been #G Completed#!!"
+ 
+ me_duuchuu_12_title:0 "$jomon_duuchuu_missions_task_12$"
+ me_duuchuu_12_desc:0 ""
+ me_duuchuu_12.a:0 ""
+ me_duuchuu_12_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_12$#!' has now been #G Completed#!!"
+
+ me_duuchuu_130_desc:0 "Unfortunately, we were beaten to the island of #E Osumi#! by the #E Yayoi#!... however, because we've been such a consistent trade partner, the owner of #E Osumi#! are willing to part with it for a price! We've fashionned an especially pretty seashell bracelet worth a lot to the #E Yayoi#!. In exchange, we will be given the island."
+ me_duuchuu_13.b:0 "It will be well worth it in the long run."
+ 
+ me_duuchuu_13_title:0 "$jomon_duuchuu_missions_task_13$"
+ me_duuchuu_13_desc:0 "Our large presense on the islands of #E Amami#! have attracted the native #E Duuchuu#! of #E Osumi#!. They've approached us with interest in joining our federation, becoming a part of the #E Liukiu#! proper!"
+ me_duuchuu_13.a:0 "Fantastic!"
+ me_duuchuu_13_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_13$#!' has now been #G Completed#!!"
+ 
+ me_duuchuu_14_title:0 "$jomon_duuchuu_missions_task_14$"
+ me_duuchuu_14_desc:0 ""
+ me_duuchuu_14.a:0 ""
+ me_duuchuu_14_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_14$#!' has now been #G Completed#!!"
+ 
+ me_duuchuu_15_title:0 "$jomon_duuchuu_missions_task_15$"
+ me_duuchuu_15_desc:0 ""
+ me_duuchuu_15.a:0 ""
+ me_duuchuu_15_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_15$#!' has now been #G Completed#!!"
+ 
+ me_duuchuu_16_title:0 "$jomon_duuchuu_missions_task_16$"
+ me_duuchuu_16_desc:0 ""
+ me_duuchuu_16.a:0 ""
+ me_duuchuu_16_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_16$#!' has now been #G Completed#!!"
+ 
+ me_duuchuu_17_title:0 "$jomon_duuchuu_missions_task_17$"
+ me_duuchuu_17_desc:0 ""
+ me_duuchuu_17.a:0 ""
+ me_duuchuu_17_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_17$#!' has now been #G Completed#!!"
+ 
+ me_duuchuu_18_title:0 "$jomon_duuchuu_missions_task_18$"
+ me_duuchuu_18_desc:0 ""
+ me_duuchuu_18.a:0 ""
+ me_duuchuu_18_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_18$#!' has now been #G Completed#!!"
+ 
+ me_duuchuu_19_title:0 "$jomon_duuchuu_missions_task_19$"
+ me_duuchuu_19_desc:0 ""
+ me_duuchuu_19.a:0 ""
+ me_duuchuu_19_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_19$#!' has now been #G Completed#!!"
+ 
+ me_duuchuu_20_title:0 "$jomon_duuchuu_missions_task_20$"
+ me_duuchuu_20_desc:0 ""
+ me_duuchuu_20.a:0 ""
+ me_duuchuu_20_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_20$#!' has now been #G Completed#!!"
+ 
+ 
