--- a/localization/english/ti_gui_l_english.yml
+++ b/localization/english/ti_gui_l_english.yml
@@ -122,6 +122,9 @@ chinese_empire_consort: "Consort"
 yamato_empire_ruler: "Emperor"
 yamato_empire_ruler_female: "Empress"
 yamato_empire_consort: "Consort"
+pirate_kingdom_ruler: "King"
+pirate_kingdom_ruler_female: "Queen"
+pirate_kingdom_consort: "Consort"
 
 #china mods
 
