bout half done if not more // okinawa tree

--- a/localization/english/acb_cultures_l_english.yml
+++ b/localization/english/acb_cultures_l_english.yml
@@ -104,6 +104,7 @@
  wa:0 "Wa"
  kumaso:0 "Kumaso"
  aduma:0 "Aduma"
+ nansei:0 "Nansei"
  # Jomon cultures, moved by Izn
  #ainu:0 "Ezo"
  #dewa:0 "Dewa"
