--- a/localization/english/missions/jomon_missions_l_english.yml
+++ b/localization/english/missions/jomon_missions_l_english.yml
@@ -636,22 +636,22 @@ l_english:
  jomon_duuchuu_missions_task_7_DESC:0 "The #Y Nuruu Priestess#! is the most important of the #Y Kaminchu#! class. They were traditionally women, and acted as a medium between the divine world and our own. What kind of news does she have for us? \n\n\n\n\n\n\n\n\n\n@celt_mil2!"
  
  jomon_duuchuu_missions_task_8:0 "Waters Flow to Formosa"
- jomon_duuchuu_missions_task_8_DESC:0 ""
+ jomon_duuchuu_missions_task_8_DESC:0 "The #E Formosian Sea#! is both home to the #E Yizhou#!, as well as our own #E Southern Liukiu#! islands. We have had contact with them for centuries, and many aspects of their culture and faith have affected our southern islands. It is time we unify with them more intimately, directly controlling the island of #E Formosia#!. \n\n\n\n\n\n\n\n\n\n@china_mil2!"
  
  jomon_duuchuu_missions_task_9:0 "Permanent Pinghu Presence"
- jomon_duuchuu_missions_task_9_DESC:0 ""
+ jomon_duuchuu_missions_task_9_DESC:0 "The island of #E Pinghu#! is positioned in such a way that it would be perfect as a trading colony. Let us develop the land and prepare it to become a city."
  
  jomon_duuchuu_missions_task_10:0 "A New Anaro"
- jomon_duuchuu_missions_task_10_DESC:0 ""
+ jomon_duuchuu_missions_task_10_DESC:0 "The island of #E Anaro#! is positioned in such a way that it would be perfect as a trading colony. Let us develop the land and prepare it to become a city."
  
  jomon_duuchuu_missions_task_11:0 "Ichor of the Igorot"
- jomon_duuchuu_missions_task_11_DESC:0 ""
+ jomon_duuchuu_missions_task_11_DESC:0 "We know very little about the #E Igorot#!, other than that they seem related to the #E Yizhou#! somehow. Regardless, their islands seem perfect for our growing kingdom. We simply MUST conquer them for ourselves, even at the cost of blood."
  
  jomon_duuchuu_missions_task_12:0 "Azure Shores of Zhuya"
  jomon_duuchuu_missions_task_12_DESC:0 ""
  
  jomon_duuchuu_missions_task_13:0 "Forward Colonization"
- jomon_duuchuu_missions_task_13_DESC:0 "The people of #Y [GetProvince('(int32)9740').GetName]#! are our flesh and blood, yet they lay much closer to the #E Kumaso#! people of the mainland. It would be rather aggressive to claim this as our own, but we do have a legitimate claim to the island."
+ jomon_duuchuu_missions_task_13_DESC:0 "The people of #Y [GetProvince('(int32)9740').GetName]#! are our flesh and blood, yet they lay much closer to the #E Kumaso#! people of the mainland. It would be rather aggressive to claim this as our own, but we do have a legitimate claim to the island. \n\n\n\n\n\n\n\n\n\n@greek_mil4!"
  
  jomon_duuchuu_missions_task_14:0 "Conquest of Kumaso"
  jomon_duuchuu_missions_task_14_DESC:0 ""
@@ -678,19 +678,22 @@ l_english:
  jomon_duuchuu_missions_task_21_DESC:0 ""
 
  jomon_duuchuu_missions_task_22:0 "A Pirate's Life for Me?"
- jomon_duuchuu_missions_task_22_DESC:0 ""
+ jomon_duuchuu_missions_task_22_DESC:0 "The seas around us have always been invested with #E Pirates#!. With our new military focus, we should consider the possibility of adopting a #E Piratical Monarchy#! government. \n\n\n\n\n\n\n\n\n\n@persia_mil3!"
 
  jomon_duuchuu_missions_task_23:0 "Yoink Yongjudong"
  jomon_duuchuu_missions_task_23_DESC:0 ""
 
  jomon_duuchuu_missions_task_24:0 "The Yuta Rebuttle"
- jomon_duuchuu_missions_task_24_DESC:0 "The #Y Yuta#! are another major faction of the #E Kaminchu#! religious class. Although the #Y Nuuru#! are typically more important, the #Y Yuta#! have a habit of undercutting them anyways. They refute the #Y Nuruu's#! suggestion to take a new, less passive, stance on diplomacy. Let's hear what they have to say for themselves."
+ jomon_duuchuu_missions_task_24_DESC:0 "The #Y Yuta#! are another major faction of the #E Kaminchu#! religious class. Although the #Y Nuuru#! are typically more important, the #Y Yuta#! have a habit of undercutting them anyways. They refute the #Y Nuruu's#! suggestion to take a new, less passive, stance on diplomacy. Let's hear what they have to say for themselves. \n\n\n\n\n\n\n\n\n\n@italic_mil18!"
 
  jomon_duuchuu_missions_task_25:0 "Yaeyama Yuta Proposal"
  jomon_duuchuu_missions_task_25_DESC:0 "The #Y Yuta#! class have another proposal concering our governance of the #E Yizhou#! people. Let's hear what they have to say for themselves."
 
  jomon_duuchuu_missions_task_26:0 "Name of the Nansei"
  jomon_duuchuu_missions_task_26_DESC:0 ""
+
+ jomon_duuchuu_missions_task_27:0 "The Way of the Te"
+ jomon_duuchuu_missions_task_27_DESC:0 "The primordial form of #E Karate#! was called #E Te#!, developped in #E Okinawa#!. It's unknown when #E Te#! was first developped, however, it's likely that it existed in decentralized forms since the beggining of #E Ryukyuan#! history."
  
  
  #Tooltips
@@ -706,6 +709,7 @@ l_english:
  okinawa_make_an_offer_tt:0 "Make an offer to purchase #Y [GetProvince('(int32)9740').GetName]#!"
  duuchuu_yoink_tt:0 "Our #E Navy#! has #Y 30#! or more ships and has a #E Comander#!."
  okinawa_disaster_tt:0 "#R If what the #Y Nuruu#! says is true, we will experience the following:#!"
+ yuta_1_tt:0 "We will hear the proposal of the #Y Yuta Spirit-Medium#!."
  
  
  #Modifiers
@@ -714,13 +718,29 @@ l_english:
  okinawa_boats:0 "Maritime Merchants"
  okinawa_rice:0 "Wet-Rice Agriculture"
  terrify_tamna:0 "Terror of the Sea"
+ yuta_undercutters:0 "Powerful Yuta Class"
+ nuruu_dominance:0 "Supremacy of the Nuruu Class"
+ cultural_familiarity_yaemama:0 "Cultural Familiarity"
+ duuchuu_colony:0 "Liukiu Trade Colony"
+ ichor_of_igorot:0 "Ichor of the Igorot"
  
  #Others
  shell_bracelet:0 "Silver Shell Bracelet"
  shell_bracelet_desc:0 "A shining silver exterior made from polished metals imported from China and Japan, this ornament has an intricate seashell pattern adorning its rim, giving it a distinct Liukiu feel."
- pirate_monarchy:0 "Piratocratic Kingdom"
+ pirate_kingdom:0 "Piratical Monarchy"
  shell_jewelry:0 "Seashell Bracelet"
  shell_jewelry_desc:0 "An especially expensive Seashell Bracelet created by the natives of the Nanto islands, or as they call themselves, the Liuchu. We traded some useless territory filled with Duuchuu for this priceless artifact, now that's stonks!"
+ NANTO_NAME:0 "Nanto"
+ NANTO_ADJECTIVE:0 "Nansei"
+ RY1:0 "Anaro"
+ RY2:0 "Pinghu"
+ formable_not_nanto_exists:0 "#Y Nanto#! does not already exist."
+ form_nanto:0 "Establish Nanto"
+ form_nanto_desc:0 "The #E Nansei#! were what the #E Yayoi#! referred to the #E Duuchuu#! as. Roughly translating to 'the southwesterners,' we have now adopted many #E Duuchuu#! traditions, thus making the #E Nansei#! a syncretic culture. With our own language and traditions, the state of #E Nanto#! rises!"
+ RYU_NAME:0 "Ryukyu Kingdom"
+ RYU_ADJECTIVE:0 "Ryukyuan"
+ form_ryukyu:0 "Proclaim the Ryukyu Kingdom"
+ form_ryukyu_desc:0 "Although in history, the #E Ryukyu Kingdom#! did not appear until the 1st millenium CE, the name and culture of the #E Ryukyu#! is still around. By establishing themselves as a powerhouse of the seas between #E China#! and #E Japan#!, the people of #E Amamichuu#! have gained dominance over the waves."
  
  #Events
  me_duuchuu_1_title:0 "$jomon_duuchuu_missions_task_1$"
@@ -768,23 +788,27 @@ l_english:
  me_duuchuu_7_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_7$#!' has now been #G Completed#!!"
  
  me_duuchuu_8_title:0 "$jomon_duuchuu_missions_task_8$"
- me_duuchuu_8_desc:0 ""
- me_duuchuu_8.a:0 ""
+ me_duuchuu_8_desc:0 "The #E Yizhou#! people of the #E Formosian Island#! have long interacted with the #E Southern Duuchuu#! peoples. They have been the source for many of the commodoties that we have enjoyed. Now that we control them directly, we should spend time to develop their lands and get the maximum amount of value we can out of it.\n\nFurthermore, as we look southwards, we see even more opportunity for precious tradegoods. We should consider expanding everfurther into the kin culture of the #E Yizhou#! known as the #E Igorot#!."
+ me_duuchuu_8.a:0 "Imagine what we can make with all these goods."
  me_duuchuu_8_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_8$#!' has now been #G Completed#!!"
  
  me_duuchuu_9_title:0 "$jomon_duuchuu_missions_task_9$"
- me_duuchuu_9_desc:0 ""
- me_duuchuu_9.a:0 ""
+ me_duuchuu_9_desc:0 "The island of #E Pinghu#! lays in a prime position for trade with #E China#!. It's an ideal palce for us to build a city here for commerce across the #E South China Sea#!. In a way, it opens up a whole new route of influence for us."
+ me_duuchuu_9.a:0 "Pinghu will be a fantastic city!"
+ me_duuchuu_9.b:0 "Save our cash for something else."
+ me_duuchuu_9.c:0 "Let's make it into an autonomous colony instead."
  me_duuchuu_9_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_9$#!' has now been #G Completed#!!"
  
  me_duuchuu_10_title:0 "$jomon_duuchuu_missions_task_10$"
- me_duuchuu_10_desc:0 ""
- me_duuchuu_10.a:0 ""
+ me_duuchuu_10_desc:0 "The island of #E Anaro#! lays in a perfect position for influence over #E Austronesia#!. It's an ideal palce for us to build a city here for commerce across the #E South China Sea#!. In a way, it opens up a whole new route of influence for us."
+ me_duuchuu_10.a:0 "Anaro will be a magestic city!"
+ me_duuchuu_10.b:0 "Save our cash for something else."
+ me_duuchuu_10.c:0 "Let's make it into an autonomous colony instead."
  me_duuchuu_10_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_10$#!' has now been #G Completed#!!"
  
  me_duuchuu_11_title:0 "$jomon_duuchuu_missions_task_11$"
- me_duuchuu_11_desc:0 ""
- me_duuchuu_11.a:0 ""
+ me_duuchuu_11_desc:0 "Some in our capital judge us now. We have gone far beyond our little islands. However, the vast majority see our achievements as just that; achievements. With the conquest of the land of the #E Igorots#!, we have proven our ability to govern and fight from distant lands. The ichor of the #E Igorots#! stands testament to our ability."
+ me_duuchuu_11.a:0 "The whole of these islands shall be ours."
  me_duuchuu_11_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_11$#!' has now been #G Completed#!!"
  
  me_duuchuu_12_title:0 "$jomon_duuchuu_missions_task_12$"
@@ -835,4 +859,26 @@ l_english:
  me_duuchuu_20.a:0 ""
  me_duuchuu_20_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_20$#!' has now been #G Completed#!!"
  
- 
+ me_duuchuu_21_title:0 "$jomon_duuchuu_missions_task_21$"
+ me_duuchuu_21_desc:0 ""
+ me_duuchuu_21.a:0 ""
+ me_duuchuu_21_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_21$#!' has now been #G Completed#!!"
+
+ me_duuchuu_22_title:0 "$jomon_duuchuu_missions_task_22$"
+ me_duuchuu_22_desc:0 "The ways of the sea are brutal. We have to adapt and overcome the typhoon of obstacles we come across. To do so, the premise of a #E Piratical#! governance is quite appealing. It mixes our newfound desire to influence the seas with our heritage of mercantilism well. Of course, pirates do not make the best allies, so we should consider this carefully."
+ me_duuchuu_22.a:0 "Yo ho!"
+ me_duuchuu_22.b:0 "We should consider a republic instead."
+ me_duuchuu_22_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_22$#!' has now been #G Completed#!!"
+
+ me_duuchuu_23_title:0 "$jomon_duuchuu_missions_task_23$"
+ me_duuchuu_23_desc:0 ""
+ me_duuchuu_23.a:0 ""
+ me_duuchuu_23_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_23$#!' has now been #G Completed#!!"
+
+ me_duuchuu_24_title:0 "$jomon_duuchuu_missions_task_24$"
+ me_duuchuu_24_desc:0 "The #E Yuta#! priestesses have come to us with a proposal. They interpret the words of the gods differently from the #E Nuruu#!. They say that influence need not be so direct, we can do so through peaceful means, and we must not forget to take care of our islands as well."
+ me_duuchuu_24.a:0 "A compelling case."
+ me_duuchuu_24.b:0 "We will only listen to the Nuruu."
+ me_duuchuu_24_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_24$#!' has now been #G Completed#!!"
+
+ me_duuchuu_26_title:0 ""
