--- a/localization/english/ti_cultures_l_english.yml
+++ b/localization/english/ti_cultures_l_english.yml
@@ -61,6 +61,7 @@
  sunazawa:0 "Sunazawa"
  mitinooku:0 "Sirakawa"
  duuchuu:0 "Duuchuu"
+ yaeyama:0 "Yaeyama"
  emishi:0 "Emishi"
  #New Rong
  nuomuhong:0 "Nuomuhong"
